--- a/htdocs/src/sass/news/_news.scss
+++ b/htdocs/src/sass/news/_news.scss
@@ -64,7 +64,6 @@
       flex-wrap: wrap;
     }
   }
-
   &__form-flex{
     position: relative;
     display: flex;
@@ -101,7 +100,6 @@
       }
     }
   }
-
   &__form-box{
     width: get_vw(298);
     padding: get_vw(20) get_vw(12);
@@ -140,89 +138,6 @@
       @include pc-fluid-size(padding, (0 9 1));
       @include pc-fluid-size(font-size, (10));
       @include pc-fluid-size(border-radius, (30));
-
-    }
-    &.area{
-      @include pc-fluid-size(padding, (8 15));
-      &>span{
-        color: $c_white;
-        justify-content: flex-start;
-        &[data-area="main"]{
-          background-color: $c_green;
-        }
-        &[data-area="tora"]{
-          background-color: $c_red;
-        }
-        &[data-area="kochi"]{
-          background-color: $c_blue;
-        }
-        &[data-area="wing"]{
-          background-color: $c_orange;
-        }
-        &[data-area="monchi"]{
-          background-color: $c_pink;
-        }
-        &[data-area="iris"]{
-          background-color: $c_purple;
-        }
-        @include min-screen{
-          cursor: pointer;
-        }
-        & .btn-close{
-          width: get_vw(45);
-          height: 100%;
-          position: absolute;
-          top: 50%;
-          right: 0;
-          transform: translateY(-50%);
-          @include pc-fluid-size(width, (45));
-          @include after{
-            background-image: url('../img/event/form_close.png');
-            background-size: 100%;
-            width: get_vw(8);
-            height: get_vw(8);
-            position: absolute;
-            top: 50%;
-            right: get_vw(12);
-            transform: translateY(-50%);
-            @include pc-fluid-size(width, (6));
-            @include pc-fluid-size(height, (6));
-            @include pc-fluid-size(right, (5));
-          }
-        }
-      }
-    }
-    &.date{
-      flex-direction: column;
-      @include min-screen{      
-        @include center;
-      }
-      & strong{
-        display: block;
-        font-size: get_vw(14);
-        font-weight: 500;
-        @include pc-fluid-size(font-size, (14));
-      }
-      & p{
-        margin-top: get_vw(4);
-        font-size: get_vw(14);
-        font-weight: 300;
-        @include pc-fluid-size(margin-top, (8));
-        @include pc-fluid-size(font-size, (14));
-      }
-    }
-    &.word{
-      font-size: get_vw(14);
-      font-weight: 500;
-      resize: none;
-      @include pc-fluid-size(padding, (25 18));
-      @include pc-fluid-size(font-size, (14));
-      @include min-screen{      
-        width: 100%;
-      }
-      &::placeholder{
-        color: $c_gray;
-      }
     }
   }
 
@@ -238,9 +153,9 @@
     opacity: 0;
     transition: all 0.4s ease;
     pointer-events: none;
-    z-index: 999;
+    z-index: 1001;
     @include pc-fluid-size(width, (781));
-    @include pc-fluid-size(padding, (30 34 42 34));
+    @include pc-fluid-size(padding, (30 35));
     @include pc-fluid-size(border-radius, (15));
     @include pc-fluid-size(top, (80));
     @include pc-fluid-size(left, (30));
@@ -254,34 +169,14 @@
         display: none
       }
     }
-    &.date{
-      @include pc-fluid-size(width, (820));
-      @include pc-fluid-size(padding, (38 30 42 30));
-      @include pc-fluid-size(top, (80));
-      @include pc-fluid-size(border-width, (2));
-      @include min-screen{
-        left: 50%;
-        transform: translateX(-50%);
-      }
-    }
     &.cate{
-      @include pc-fluid-size(width, (357));
-      @include pc-fluid-size(padding, (40 48 36 48));
+      @include pc-fluid-size(width, (568));
+      @include pc-fluid-size(padding, (40 150));
       @include pc-fluid-size(top, (80));
-      @include pc-fluid-size(left, (34));
+      @include pc-fluid-size(left, (32));
       @include pc-fluid-size(border-width, (2));
       & .event__modal-next{
         @include pc-fluid-size(margin-top, (28));
-      }
-    }
-    &.word{
-      @include pc-fluid-size(width, (1200));
-      @include pc-fluid-size(padding, (25 30 36 45));
-      @include pc-fluid-size(top, (80));
-      @include pc-fluid-size(left, (34));
-      @include pc-fluid-size(border-width, (2));
-      & .event__modal-next{
-        @include pc-fluid-size(margin-top, (-28));
       }
     }
     @include min-screen{
@@ -296,14 +191,6 @@
       opacity: 1;
       pointer-events: all;
     }
-
-    // &.date{
-    //   &:not([hidden]){
-    //     display: block;
-    //     opacity: 1;
-    //     pointer-events: all;
-    //   }
-    // }
   }
 
   &__modal-flex{
